--- a/admin-backend/package.json
+++ b/admin-backend/package.json
@@ -13,8 +13,10 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "firebase-admin": "^12.0.0"
+    "@supabase/supabase-js": "^2.5.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
   }
+
 }
