--- a/admin-backend/package.json
+++ b/admin-backend/package.json
@@ -12,7 +12,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
-    "firebase-admin": "^12.0.0"
+    "firebase-admin": "^12.0.0",
     "@supabase/supabase-js": "^2.5.3"
   },
   "devDependencies": {
@@ -20,3 +20,4 @@
   }
 
 }
+
